# ftdi-tools

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
examples/: i2c_lm75.rs  i2c_sht31.rs  jtag_detect.rs  jtag_detect_fast.rs  jtag_scan_chains.rs  spi_flash.rs  spi_flash2.rs  spi_flash3.rs  spi_flash4.rs  spi_loopback.rs  spi_nor.rs  spibus_flash.rs  spibus_st7789.rs  spidevice_flash.rs  spidevice_st7789.rs  swd_read_id.rs
src/: delay.rs  ftdaye.rs  gpio.rs  i2c.rs  lib.rs  list.rs  mpsse.rs  mpsse_cmd.rs  spi.rs  swd.rs
src/ftdaye/: error.rs  mod.rs
src/jtag/: hw_jtag.rs  jtag_detect.rs  mod.rs
